# BerryWeather_software

./: .gitignore  Structure.md
esp32_satellite/: .gitignore  CMakeLists.txt  sdkconfig
esp32_satellite/components/bme688_driver/: CMakeLists.txt  bme688.h
esp32_satellite/components/lora_comm/: CMakeLists.txt  lora_comm.c  lora_comm.h
esp32_satellite/main/: CMakeLists.txt  middleman_main.c  modular.c  mqtt.c  satellite_main.c
esp32_skeleton/: CMakeLists.txt  sdkconfig
esp32_skeleton/components/DS18B20/: CMakeLists.txt  DS18B20_documentation.md  ds18b20.c
esp32_skeleton/components/DS18B20/include/: ds18b20.h
esp32_skeleton/components/as7331/: CMakeLists.txt  as7331.c  as7331_documentation.md
esp32_skeleton/components/as7331/include/: as7331.h
esp32_skeleton/components/bme688/: CMakeLists.txt  bme688.c  bme68x.c  readme.md
esp32_skeleton/components/bme688/include/: bme688.h
esp32_skeleton/components/lora_comm/: CMakeLists.txt
esp32_skeleton/components/rain_sensor/: CMakeLists.txt  rain_sensor.c  rain_sensor_documentation.md  rain_sensor_servo.c
esp32_skeleton/components/rain_sensor/include/: rain_sensor.h
esp32_skeleton/components/soil_moisture/: CMakeLists.txt  soil_moisture.c  soil_moisture_documentation.md
esp32_skeleton/components/soil_moisture/include/: soil_moisture.h
esp32_skeleton/components/wind_sensor/: CMakeLists.txt  wind_sensor.c  wind_sensor_documentation.md
esp32_skeleton/components/wind_sensor/include/: wind_sensor.h
esp32_skeleton/main/: CMakeLists.txt  as7331.c  as7331.h  as7331_stephen_test_main.c  bme688.c  ds18b20.c  main.c  main.c.backup  middleman_main.c  rain_sensor.c  rain_sensor.h  rain_sensor_servo.c  satellite_main.c  servo_test.c  soil_moisture.c  soil_moisture.h  wind_sensor_test.c
esp32_skeleton/main/as7331/: as7331.c
esp32_skeleton/main/bme688/: bme688.c  bme688.h
